feat: remove three objects: Clustering, Wordsets, Factorsets
